--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </div>
         <h1 id="name">Antonio Castro Yébenes</h1>
         <h2 id="title" class="hidden">> Desarrollador de Aplicaciones Multiplataforma<span class="cursor">_</span></h2>
-        <a id="cv-button" class="hidden btn btn-primary mt-3" href="../assets/cv_AntonioCastroY.pdf" download><i class="fas fa-download"></i> Descargar CV</a>
+        <a id="cv-button" class="hidden btn btn-primary mt-3" href=".assets/cv_AntonioCastroY.pdf" download><i class="fas fa-download"></i> Descargar CV</a>
     </header>
 
     <main class="container">
 
         <section id="about" class="text-center my-5">
             <div class="about-container d-flex flex-row align-items-center">
-                <img src="../assets/images/yo.jpg" alt="Logo" class="about-logo mb-3">
+                <img src=".assets/images/yo.jpg" alt="Logo" class="about-logo mb-3">
                 <div class="about-text">
                     <h2>Acerca de mí</h2>
                     <p>Soy un programador junior en formación, actualmente cursando el Grado Superior en Desarrollo de Aplicaciones Multiplataforma (DAM). Mi interés por la tecnología y la programación me ha llevado a desarrollar habilidades en distintos lenguajes y herramientas de desarrollo. Además, cuento con un nivel alto de inglés, lo que me permite comprender documentación técnica y recursos en este idioma, facilitando mi aprendizaje y adaptación a nuevas tecnologías.
@@ -38,7 +38,7 @@
             <div id="carouselProjects" class="carousel slide" data-ride="carousel" data-interval="5000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../assets/images/proyecto1.jpg" alt="Project 1" class="d-block w-100 img-fluid rounded">
+                        <img src=".assets/images/proyecto1.jpg" alt="Project 1" class="d-block w-100 img-fluid rounded">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="caption-bg">
                                 <h3>Project 1</h3>
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/images/proyecto2.jpg" alt="Project 2" class="d-block w-100 img-fluid rounded">
+                        <img src=".assets/images/proyecto2.jpg" alt="Project 2" class="d-block w-100 img-fluid rounded">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="caption-bg">
                                 <h3>Project 2</h3>
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/images/proyecto3.jpg" alt="Project 3" class="d-block w-100 img-fluid rounded">
+                        <img src=".assets/images/proyecto3.jpg" alt="Project 3" class="d-block w-100 img-fluid rounded">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="caption-bg">
                                 <h3>Project 3</h3>
@@ -81,122 +81,122 @@
     <div class="row justify-content-center">
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/java.svg" alt="Java" class="me-2">Java
+                <img src=".assets/images/icons/java.svg" alt="Java" class="me-2">Java
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/reactnative.svg" alt="ReactNative" class="me-2">ReactNative
+                <img src=".assets/images/icons/reactnative.svg" alt="ReactNative" class="me-2">ReactNative
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/html5.svg" alt="HTML" class="me-2">HTML
+                <img src=".assets/images/icons/html5.svg" alt="HTML" class="me-2">HTML
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/css_old.svg" alt="CSS" class="me-2">CSS
+                <img src=".assets/images/icons/css_old.svg" alt="CSS" class="me-2">CSS
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/javascript.svg" alt="JavaScript" class="me-2">JavaScript
+                <img src=".assets/images/icons/javascript.svg" alt="JavaScript" class="me-2">JavaScript
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/php.svg" alt="PHP" class="me-2">PHP
+                <img src=".assets/images/icons/php.svg" alt="PHP" class="me-2">PHP
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/sql.svg" alt="SQL" class="me-2">SQL
+                <img src=".assets/images/icons/sql.svg" alt="SQL" class="me-2">SQL
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/git.svg" alt="Git" class="me-2">Git
+                <img src=".assets/images/icons/git.svg" alt="Git" class="me-2">Git
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/android-studio.svg" alt="Android Studio" class="me-2">Android Studio
+                <img src=".assets/images/icons/android-studio.svg" alt="Android Studio" class="me-2">Android Studio
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/vscode.svg" alt="Visual Studio Code" class="me-2">Visual Studio Code
+                <img src=".assets/images/icons/vscode.svg" alt="Visual Studio Code" class="me-2">Visual Studio Code
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/oracle.svg" alt="Oracle Database" class="me-2">Oracle Database
+                <img src=".assets/images/icons/oracle.svg" alt="Oracle Database" class="me-2">Oracle Database
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/mysql.svg" alt="MySQL" class="me-2">MySQL
+                <img src=".assets/images/icons/mysql.svg" alt="MySQL" class="me-2">MySQL
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/flutter.svg" alt="Flutter" class="me-2">Flutter
+                <img src=".assets/images/icons/flutter.svg" alt="Flutter" class="me-2">Flutter
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/xml.svg" alt="XML" class="me-2">XML
+                <img src=".assets/images/icons/xml.svg" alt="XML" class="me-2">XML
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/figma.svg" alt="Figma" class="me-2">Figma
+                <img src=".assets/images/icons/figma.svg" alt="Figma" class="me-2">Figma
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/docker.svg" alt="Docker" class="me-2">Docker
+                <img src=".assets/images/icons/docker.svg" alt="Docker" class="me-2">Docker
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/after-effects.svg" alt="After Effects" class="me-2">After Effects
+                <img src=".assets/images/icons/after-effects.svg" alt="After Effects" class="me-2">After Effects
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/blender.svg" alt="Blender" class="me-2">Blender
+                <img src=".assets/images/icons/blender.svg" alt="Blender" class="me-2">Blender
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/illustrator.svg" alt="Illustrator" class="me-2">Illustrator
+                <img src=".assets/images/icons/illustrator.svg" alt="Illustrator" class="me-2">Illustrator
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/indesign.svg" alt="InDesign" class="me-2">InDesign
+                <img src=".assets/images/icons/indesign.svg" alt="InDesign" class="me-2">InDesign
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/photoshop.svg" alt="Photoshop" class="me-2">Photoshop
+                <img src=".assets/images/icons/photoshop.svg" alt="Photoshop" class="me-2">Photoshop
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/premiere.svg" alt="Premiere" class="me-2">Premiere
+                <img src=".assets/images/icons/premiere.svg" alt="Premiere" class="me-2">Premiere
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/unity.svg" alt="Unity" class="me-2">Unity
+                <img src=".assets/images/icons/unity.svg" alt="Unity" class="me-2">Unity
             </div>
         </div>
         <div class="col-6 col-md-3 mb-4">
             <div class="technology  text-white p-3 rounded d-flex align-items-center justify-content-center">
-                <img src="../assets/images/icons/linux.svg" alt="Linux" class="me-2">Linux
+                <img src=".assets/images/icons/linux.svg" alt="Linux" class="me-2">Linux
             </div>
         </div>
     </div>
@@ -205,7 +205,7 @@
     </main>
 
     <footer class="bg-dark text-white text-center py-3">
-        <img src="../assets/images/AKSTRO_LOGO2.png" alt="Logo" class="logo mb-2">
+        <img src=".assets/images/AKSTRO_LOGO2.png" alt="Logo" class="logo mb-2">
         <p>&copy; 2025 Antonio Castro Yébenes</p>
         <p><i class="fas fa-envelope"></i> <a href="mailto:antonio.casyeb@gmail.com" class="text-white">antonio.casyeb@gmail.com</a></p>
         <p><a href="https://www.linkedin.com/in/antonio-castro25052001" target="_blank" class="text-white">LinkedIn</a> | <a href="https://github.com/AntonioCastro-dev" target="_blank" class="text-white">GitHub</a></p>
