--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="container">
 
         <section id="about" class="text-center my-5">
-            <div class="about-container d-flex flex-row align-items-center">
+            <div class="about-container align-items-center">
                 <img src="assets/images/yo.jpg" alt="Logo" class="about-logo mb-3">
                 <div class="about-text">
                     <h2>Acerca de mí</h2>
@@ -33,7 +33,7 @@
             </div>
         </section>
 
-        <h2 class="h2tit text-center text-white text-decoration-underline my-5">Proyectos</h2>
+        <h2 class="h2tit text-center text-white">Proyectos</h2>
         <section id="projects" class="text-center my-5">
             <div id="carouselProjects" class="carousel slide" data-ride="carousel" data-interval="5000">
                 <div class="carousel-inner">
