--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/proyecto3.jpg" alt="Project 3" class="d-block w-100 img-fluid rounded">
+                        <a href="https://github.com/AntonioCastro-dev/Programacion-Multimedia-Dispositivos-Moviles/tree/main/Almazon"><img src="assets/images/proyecto3.jpg" alt="Project 3" class="d-block w-100 img-fluid rounded">
                         <div class="carousel-caption d-none d-md-block">
                             <div class="caption-bg">
                                 <h3>Project 3</h3>
                                 <p>Descripción del proyecto 3.</p>
                             </div>
-                        </div>
+                        </div></a>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselProjects" role="button" data-slide="prev">
