--- a/index.html
+++ b/index.html
@@ -38,31 +38,37 @@
             <div id="carouselProjects" class="carousel slide" data-ride="carousel" data-interval="5000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="assets/images/proyecto1.jpg" alt="Project 1" class="d-block w-100 img-fluid rounded">
-                        <div class="carousel-caption d-none d-md-block">
-                            <div class="caption-bg">
-                                <h3>Project 1</h3>
-                                <p>Descripción del proyecto 1.</p>
+                        <a href="https://github.com/AntonioCastro-dev/Diseno-Interfaces/tree/main/fitnessApp"></a>
+                            <img src="assets/images/proyecto1.jpg" alt="Project 1" class="d-block w-100 img-fluid rounded">
+                            <div class="carousel-caption d-none d-md-block">
+                                <div class="caption-bg">
+                                    <h3>Project 1</h3>
+                                    <p>Descripción del proyecto 1.</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/proyecto2.jpg" alt="Project 2" class="d-block w-100 img-fluid rounded">
-                        <div class="carousel-caption d-none d-md-block">
-                            <div class="caption-bg">
-                                <h3>Project 2</h3>
-                                <p>Descripción del proyecto 2.</p>
+                        <a href="https://github.com/AntonioCastro-dev/Diseno-Interfaces/tree/main/fitnessApp">
+                            <img src="assets/images/proyecto2.jpg" alt="Project 2" class="d-block w-100 img-fluid rounded">
+                            <div class="carousel-caption d-none d-md-block">
+                                <div class="caption-bg">
+                                    <h3>Project 2</h3>
+                                    <p>Descripción del proyecto 2.</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="https://github.com/AntonioCastro-dev/Programacion-Multimedia-Dispositivos-Moviles/tree/main/Almazon"><img src="assets/images/proyecto3.jpg" alt="Project 3" class="d-block w-100 img-fluid rounded">
-                        <div class="carousel-caption d-none d-md-block">
-                            <div class="caption-bg">
-                                <h3>Project 3</h3>
-                                <p>Descripción del proyecto 3.</p>
+                        <a href="https://github.com/AntonioCastro-dev/Programacion-Multimedia-Dispositivos-Moviles/tree/main/Almazon">
+                            <img src="assets/images/proyecto3.jpg" alt="Project 3" class="d-block w-100 img-fluid rounded">
+                            <div class="carousel-caption d-none d-md-block">
+                                <div class="caption-bg">
+                                    <h3>Project 3</h3>
+                                    <p>Descripción del proyecto 3.</p>
+                                </div>
                             </div>
-                        </div></a>
+                        </a>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselProjects" role="button" data-slide="prev">
