--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="carouselProjects" class="carousel slide" data-ride="carousel" data-interval="5000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <a href="https://github.com/AntonioCastro-dev/Diseno-Interfaces/tree/main/fitnessApp"></a>
+                        <a href="https://github.com/AntonioCastro-dev/Diseno-Interfaces/tree/main/fitnessApp">
                             <img src="assets/images/proyecto1.jpg" alt="Project 1" class="d-block w-100 img-fluid rounded">
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="caption-bg">
