--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                             <img src="assets/images/proyecto1.jpg" alt="Project 1" class="d-block w-100 img-fluid rounded">
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="caption-bg">
-                                    <h3>Project 1</h3>
-                                    <p>Descripción del proyecto 1.</p>
+                                    <h3>Fitness App</h3>
+                                    <p>Aplicación de fitness con ReactNative enfocada principalmente a la parte gráfica de esta.</p>
                                 </div>
                             </div>
                         </a>
@@ -53,8 +53,8 @@
                             <img src="assets/images/proyecto2.jpg" alt="Project 2" class="d-block w-100 img-fluid rounded">
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="caption-bg">
-                                    <h3>Project 2</h3>
-                                    <p>Descripción del proyecto 2.</p>
+                                    <h3>Sevici</h3>
+                                    <p>Aplicación de Sevici con formularios de inicio de sesión y registro. Hecha con ReactNative.</p>
                                 </div>
                             </div>
                         </a>
@@ -64,8 +64,8 @@
                             <img src="assets/images/proyecto3.jpg" alt="Project 3" class="d-block w-100 img-fluid rounded">
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="caption-bg">
-                                    <h3>Project 3</h3>
-                                    <p>Descripción del proyecto 3.</p>
+                                    <h3>Almazon</h3>
+                                    <p>Aplicacion para gestion de inventario de un almacen. Hecha con Java, XML permite agregar, eliminar y modificar productos de una lista.</p>
                                 </div>
                             </div>
                         </a>
